--- a/DatabaseExporter/App.config
+++ b/DatabaseExporter/App.config
@@ -3,4 +3,12 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+	<connectionStrings>
+		<add name="Initial" 
+			 connectionString="Data Source=censored;Initial Catalog=censored;User Id=censored;Password=censored;" 
+			 providerName="System.Data.SqlClient" />
+	</connectionStrings>
+	<appSettings>
+		<add key="outputDirectory" value="censoredPath" />
+	</appSettings>
 </configuration>
