Finished up the initial application

--- a/DatabaseExporter/App.config
+++ b/DatabaseExporter/App.config
@@ -5,11 +5,11 @@
 	</startup>
 	<connectionStrings>
 		<add name="Initial"
-			 connectionString="Data Source=censored;Initial Catalog=censored;User Id=censored;Password=censored;"
+			 connectionString="Data Source=your_server;Initial Catalog=your_database;User Id=your_username;Password=your_password;"
 			 providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<appSettings>
-		<add key="outputDirectory" value="censoredPath" />
+		<add key="outputDirectory" value="C:\Your\Output\Directory" />
 	</appSettings>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
